gke/cloud-armor-gke/manifests/bookstore.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstore-english
  namespace: bookstore-en
spec:
  replicas: 2
  selector:
    matchLabels:
      app: bookstore-en
      version: english
  template:
    metadata:
      labels:
        app: bookstore-en
        version: english
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bookstore-english
  namespace: bookstore-en
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: bookstore-en
    version: english
  ports:
  - port: 8080
    targetPort: 8080
